[gd_scene load_steps=6 format=3 uid="uid://3timonp7cr7n"]

[ext_resource type="FontFile" uid="uid://0fc8iiu741ma" path="res://assets/kenvector_future_thin.ttf" id="1_jvpeq"]
[ext_resource type="Script" path="res://ui/hud.gd" id="1_o0tr6"]
[ext_resource type="Texture2D" uid="uid://gt6d6h5pqhgs" path="res://assets/player_small.png" id="2_pafym"]
[ext_resource type="Texture2D" uid="uid://diyrvmqv65mj6" path="res://assets/play_button.png" id="3_a05wc"]
[ext_resource type="Texture2D" uid="uid://bx3fdl6kc3e1r" path="res://assets/play_button_h.png" id="4_tyuc5"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_o0tr6")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="ScoreLabel" type="Label" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_jvpeq")
theme_override_font_sizes/font_size = 64
text = "0"
horizontal_alignment = 3

[node name="LivesCounter" type="HBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 2

[node name="L1" type="TextureRect" parent="MarginContainer/HBoxContainer/LivesCounter"]
texture_filter = 1
layout_mode = 2
texture = ExtResource("2_pafym")
stretch_mode = 5

[node name="L2" type="TextureRect" parent="MarginContainer/HBoxContainer/LivesCounter"]
texture_filter = 1
layout_mode = 2
texture = ExtResource("2_pafym")
stretch_mode = 5

[node name="L3" type="TextureRect" parent="MarginContainer/HBoxContainer/LivesCounter"]
texture_filter = 1
layout_mode = 2
texture = ExtResource("2_pafym")
stretch_mode = 5

[node name="StartButton" type="TextureButton" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -124.5
offset_top = -32.5
offset_right = 124.5
offset_bottom = 32.5
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("3_a05wc")
texture_hover = ExtResource("4_tyuc5")

[node name="MessageLabel" type="Label" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_jvpeq")
theme_override_font_sizes/font_size = 64
horizontal_alignment = 1
vertical_alignment = 1

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
